# wawarp

./: Cargo.toml  README.md  clippy.toml
assets/levels/: 0.toml.level
src/: lib.rs  main.rs
src/actions/: actions.rs  keyboard_system.rs  mod.rs
src/box/: mod.rs
src/camera/: cleanup.rs  mod.rs  transform_system.rs
src/components/: ability.rs  ability_timer.rs  mod.rs
src/door/: atlas_system.rs  door.rs  id.rs  mod.rs  opening_system.rs  state.rs
src/level/: counter.rs  level.rs  loading_system.rs  mod.rs  spawning_system.rs
src/main_menu/: cleanup.rs  mod.rs  setup.rs  update.rs
src/ordering/: mod.rs
src/player/: ability.rs  ability_system.rs  ability_timer.rs  animation_timer.rs  atlas_system.rs  cleanup.rs  direction.rs  direction_system.rs  mod.rs  player.rs  setup.rs  transform_system.rs
src/plugins/: actions.rs  camera.rs  mod.rs  player.rs
src/state/: mod.rs
src/switch/: activation.rs  activator.rs  atlas_system.rs  event.rs  id.rs  mod.rs  state.rs  switch.rs
src/ui/: mod.rs  setup.rs
