[package]
name = "wawarp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy="0.7"
bevy_common_assets={ version ="0.2.0", features = ["toml"] }
serde={ version ="1.0.138", features = ["derive"]}

[profile.dev.package."*"]
opt-level = 3